Bump maven-war-plugin from 3.3.1 to 3.3.2
Bumps [maven-war-plugin](https://github.com/apache/maven-war-plugin) from 3.3.1 to 3.3.2.
- [Release notes](https://github.com/apache/maven-war-plugin/releases)
- [Commits](https://github.com/apache/maven-war-plugin/compare/maven-war-plugin-3.3.1...maven-war-plugin-3.3.2)

---
updated-dependencies:
- dependency-name: org.apache.maven.plugins:maven-war-plugin
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>