@@ -167,7 +167,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>3.3.1</version>
+                    <version>3.3.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -413,6 +413,31 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
                             <target>16</target>
+                            <compilerArgs>
+                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java17-compile</id>
+            <activation>
+                <jdk>17</jdk>
+                <file>
+                    <missing>DEFAULTJDKONLY.marker</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <target>17</target>
                             <compilerArgs>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
